test/spec/switch.txt
;;; ERROR: 1
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/switch.wast
(;; STDERR ;;;

;;; STDERR ;;)
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/switch.wast:110:72: case variable out of range (max 0)
assert_invalid error:
  third_party/testsuite/switch.wast:111:72: case variable out of range (max 1)
WasmModule::Instantiate(): Compiling WASM function #3:break failed:Result = improper branch in tableswitch @+5

  var module = WASM.instantiateModule(u8a.buffer, ffi);
                    ^

;;; STDOUT ;;)
